added email to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -30,7 +30,7 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "double-click-translator@example.com"
+      "id": "petter.dronnen@outlook.com"
     }
   }
 }
